<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:theme="@style/Theme.G2"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="170dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_btn_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:contentDescription="@string/back_button"
        app:backgroundTint="@color/tertiary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        app:tint="@color/secondary_color"
        tools:ignore="RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/welcome_back"
        android:textColor="@color/secondary_color"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn_main"
        app:layout_constraintVertical_bias="0.496" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/cardStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/tertiary_color"
        app:cardCornerRadius="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/password"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:autofillHints=""
                android:background="@drawable/edit_background"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:drawableTint="@color/Dark"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:textColor="#000000"
                android:textColorHint="#808080"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user" />

            <EditText
                android:id="@+id/user"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="76dp"
                android:layout_marginBottom="32dp"
                android:autofillHints=""
                android:background="@drawable/edit_background"
                android:drawableStart="@drawable/user"
                android:drawablePadding="10dp"
                android:drawableTint="@color/Dark"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:textColor="#000000"
                android:textColorHint="#838383"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/reset_password_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:text="@string/forgot_password"
                android:textColor="@color/main_color_contrast"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="192dp"
                android:backgroundTint="@color/main_color"
                android:text="@string/sign_in"
                android:textColor="@color/secondary_color"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                tools:ignore="VisualLintButtonSize" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="#757575" />

                <TextView
                    android:id="@+id/sign_up_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/sign_up"
                    android:textColor="@color/main_color_contrast"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>